--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<img src="gaze-black.png" />
+<html>
+  <head>
+    <title>Gaze</title>
+    <style>
+      .centered {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          /* bring your own prefixes */
+          transform: translate(-50%, -50%)
+      }
+    </style>
+  </head>
+  <body>
+    <img src="gaze-black.png" class="centered" />
+  </body>
+</html>
