--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="background-color: black;">
     <img src="gaze-black.png" class="centered" />
   </body>
 </html>
