--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       }
     </style>
   </head>
-  <body style="background-color: black;">
+  <body style="color: white; background-color: black;">
     <img src="gaze-black.png" class="centered" />
+    Gaze-me DOO<br />
+    Njegoseva BB Tivat<br />
+    Crna Gora<br />
   </body>
 </html>
