--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     </style>
   </head>
   <body style="color: white; background-color: black;">
-    <img src="gaze-black.png" class="centered" />
-    Gaze-me DOO<br />
-    Njegoseva BB Tivat<br />
-    Crna Gora<br />
+    <div class="centered">
+      <img src="gaze-black.png" />
+      Gaze-me DOO<br />
+      Njegoseva BB Tivat<br />
+      Crna Gora<br />
+    </div>
   </body>
 </html>
