--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </style>
   </head>
   <body style="color: white; background-color: black;">
-    <div class="centered">
-      <img src="gaze-black.png" />
+    <div align="center" class="centered">
+      <img src="gaze-black.png" /><br />
       Gaze-me DOO<br />
       Njegoseva BB Tivat<br />
       Crna Gora<br />
