--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
           transform: translate(-50%, -50%)
       }
     </style>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
   <body style="color: white; background-color: black;">
     <div align="center" class="centered">
       <img src="gaze-black.png" /><br />
+      <br />
       Gaze-me DOO<br />
       Njegoseva BB Tivat<br />
       Crna Gora<br />
