--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   </head>
-  <body style="color: white; background-color: black;">
+  <body style="color: white; background-color: black; font-family: 'Lato', sans-serif;">
     <div align="center" class="centered">
       <img src="gaze-black.png" /><br />
       <br />
