--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div align="center" class="centered">
       <img src="gaze-black.png" /><br />
       <br />
-      Gaze-me DOO<br />
+      <strong>Gaze-me DOO</strong><br />
       Njegoseva BB Tivat<br />
       Crna Gora<br />
     </div>
