--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
           transform: translate(-50%, -50%)
       }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   </head>
-  <body style="color: white; background-color: black; font-family: 'Lato', sans-serif;">
+  <body style="color: white; background-color: black; font-family: 'Slabo 27px', sans-serif;">
     <div align="center" class="centered">
       <img src="gaze-black.png" /><br />
       <br />
