--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
   </head>
-  <body style="color: white; background-color: black; font-family: 'Slabo 27px', sans-serif;">
+  <body style="color: black; background-color: #ECF0F1; font-family: 'Slabo 27px', sans-serif;">
     <div align="center" class="centered">
       <img src="gaze-black.png" /><br />
       <br />
