--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
           transform: translate(-50%, -50%)
       }
     </style>
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=GFS+Didot" rel="stylesheet">
   </head>
-  <body style="color: black; background-color: #ECF0F1; font-family: 'Slabo 27px', sans-serif;">
+  <body style="color: black; background-color: ivory; font-family: 'GFS Didot', serif;">
     <div align="center" class="centered">
       <img src="gaze-black.png" /><br />
+      <font size="+36">G A Z E</font><br />
       <br />
       <strong>Gaze-me DOO</strong><br />
       Njegoseva BB Tivat<br />
