--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
     </style>
     <link href="https://fonts.googleapis.com/css?family=GFS+Didot" rel="stylesheet">
   </head>
-  <body style="color: black; background-color: ivory; font-family: 'GFS Didot', serif;">
+  <body style="color: black; background-color: ivory; font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif;">
     <div align="center" class="centered">
-      <img src="gaze-black.png" /><br />
-      <font size="+36">G A Z E</font><br />
+      <font size="+56">G A Z E</font><br />
       <br />
       <strong>Gaze-me DOO</strong><br />
       Njegoseva BB Tivat<br />
