--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <strong>Gaze-me DOO</strong><br />
       Njegoseva BB Tivat<br />
       Crna Gora<br />
-      <a href="mailto:info@gaze-me.com">info@gaze-me.com</a>
+      <a href="mailto:info@gaze-me.com" style="text-decoration: none">info@gaze-me.com</a>
     </div>
   </body>
 </html>
